--- a/frontend/login-khach.html
+++ b/frontend/login-khach.html
@@ -69,7 +69,7 @@
         <div id="errorMessage" class="alert alert-danger mt-3" style="display: none;"></div>
 
         <div class="login-extra">
-            <a href="#">Quên mật khẩu?</a>
+            <a href="forgot-password-khach.html">Quên mật khẩu?</a>
         </div>
 
         <hr>
