--- a/frontend/lien-he.html
+++ b/frontend/lien-he.html
@@ -209,6 +209,19 @@
             <p>Cháo dinh dưỡng cho bé yêu</p>
         </div>
         <div>
+            <p><strong>Liên kết nhanh</strong></p>
+            <p>
+                <a href="thuc-don.html" style="color: #666; text-decoration: none; margin-right: 15px;">Thực đơn</a>
+                <a href="khuyen-mai.html" style="color: #666; text-decoration: none; margin-right: 15px;">Khuyến mãi</a>
+                <a href="tin-tuc.html" style="color: #666; text-decoration: none; margin-right: 15px;">Tin tức</a>
+                <a href="lien-he.html" style="color: #666; text-decoration: none;">Liên hệ</a>
+            </p>
+        </div>
+        <div>
+            <p><strong>Thông tin</strong></p>
+            <p>
+                <a href="chinh-sach-bao-mat.html" style="color: #666; text-decoration: none;">Chính sách bảo mật</a>
+            </p>
             <p>📞 Hotline: 1900 1234</p>
             <p>📧 babycutie@gmail.com</p>
         </div>
