--- a/frontend/register-khach.html
+++ b/frontend/register-khach.html
@@ -25,6 +25,7 @@
         <nav class="main-menu">
             <a href="index.html">Trang chủ</a>
             <a href="thuc-don.html">Thực đơn</a>
+            <a href="khuyen-mai.html">Khuyến mãi</a>
             <a href="tin-tuc.html">Tin tức</a>
             <a href="lien-he.html">Liên hệ</a>
         </nav>
